# pm

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  code_review.md  compose.yaml
.claude/: ralph-loop.local.md  settings.local.json
backend/: AGENTS.md  ai.py  auth.py  db.py  main.py  pyproject.toml
backend/static/: index.html
backend/tests/: conftest.py  test_ai.py  test_auth.py  test_db.py  test_main.py  test_root.py
docs/: DATABASE.md  PLAN.md  review.md
frontend/: AGENTS.md  package.json  playwright.config.ts  vitest.config.ts
frontend/src/app/: globals.css  page.test.tsx  page.tsx
frontend/src/components/: AiSidebar.tsx  BoardDashboard.test.tsx  BoardDashboard.tsx  CardDetailModal.test.tsx  CardDetailModal.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.test.tsx  KanbanCard.tsx  KanbanCardPreview.tsx  KanbanColumn.tsx  NewCardForm.tsx  ProfileSettings.test.tsx  ProfileSettings.tsx
frontend/src/lib/: auth.test.ts  auth.ts  boardApi.test.ts  boardApi.ts  kanban.test.ts  kanban.ts
frontend/src/test/: helpers.ts
frontend/tests/: kanban.spec.ts
scripts/: AGENTS.md  start-server.ps1  start-server.sh  stop-server.ps1  stop-server.sh
