[project]
name = "pm-backend"
version = "0.1.0"
description = "FastAPI backend for Project Management MVP"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
  "pytest>=8.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
